--- a/src/frontend/packages/core/src/styles.scss
+++ b/src/frontend/packages/core/src/styles.scss
@@ -13,7 +13,6 @@
 body {
   font-family: Lato, sans-serif; // font-size: 13px;
   margin: 0;
-  overflow: hidden;
 }
 
 body,
